# kdt-system-project

./: .gitignore  Makefile  common.c  common.h  main.c  sensor.h
driver/: .gitignore  Makefile  simple_io.c
driver/BMP280/: Makefile  bmp280.h  bmp280_spi.c
driver/BMP280/test_app/: Makefile  bmp280_test.c
driver/engine/: Makefile  engine.c
driver/simple_io/: Makefile
driver/state_machine/: Makefile  state_machine.c
hal/: ControlThread.cpp  ControlThread.h  camera_HAL.cpp  hardware.c
hal/toy/: camera_HAL_toy.cpp
system/: .gitignore  Makefile  dump_state.c  set_cap.sh  system_server.c  system_server.h
system/hal/oem/: camera_HAL_oem.cpp
system/hal/toy/: camera_HAL_toy.cpp
system/include/: bmp280.h  dump_state.h  gui.h  input.h  posix_timer.h  sensor.h  system_server.h  toy.h  web_server.h
system/src/: dump_state.c  gui.c  hardware.c  input.c  main.c  posix_timer.c  system_server.c  toy.c  web_server.c
ui/: gui.c  gui.h  input.c  input.h
ui/input/: toy.c  toy.h
web_frontend/: package-lock.json  package.json
web_frontend/src/: App.jsx
web_frontend/src/sensor/: Bmp280.jsx
web_server/: Cargo.toml  test.rs  web_server.c  web_server.h
web_server/src/: api.rs  api_handler.rs  main.rs  shm.rs  static_page.rs
web_server/src/api/: shm.rs
