[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
libc = "0.2.147"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
